fix issue where dropdown did not show -removed overflow-x: hidden in header

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ html, body {
     font-family: Inter, "Helvetica Neue", Helvetica, sans-serif;
     opacity: 1;
     border-bottom: 1px solid rgb(242, 242, 242);
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 /* Rest of your button styles */
@@ -195,32 +195,6 @@ section.hero {
     }
 }
 
-.dropdown-menu {
-    display: none;
-    -webkit-tap-highlight-color: transparent;
-    user-select: none;
-    /* z-index: 1000; */
-    font-size: 12px;
-    font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgb(107, 107, 107);
-    padding-left: 15px;
-    padding-top: 5px;
-    border-top: 1px solid rgba(107, 107, 107, 0.1); 
-}
-
-.dropdown-menu-ul li {
-    list-style-type: none;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 10px;
-    color: rgb(83, 83, 83);
-    letter-spacing: 0.07em;
-    font-weight: 550;
-}
-
-.dropdown-menu-ul li:nth-last-child(1) {
-    padding-bottom: 25px;
-}
 
 footer {
     background: #333;
@@ -281,33 +255,7 @@ footer {
     font-size: 12px;
 }
 
-.dropdown-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background: rgb(242, 242, 242);
-    z-index: 1000;
-}
 
-.dropdown-menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: block;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.dropdown-menu ul li {
-    margin-right: 15px;
-}
-
-.dropdown-menu ul li a {
-    color: rgb(107, 107, 107);
-    text-decoration: none;
-    font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
-}
 
 /* More specific than just .flickity-button */
 .carousel .flickity-button {
@@ -456,3 +404,90 @@ main {
     margin: 0;
     padding: 0;
 } */
+
+
+
+
+
+/* 
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: rgb(242, 242, 242);
+    z-index: 1000;
+}
+
+.dropdown-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: block;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.dropdown-menu ul li {
+    margin-right: 15px;
+}
+
+.dropdown-menu ul li a {
+    color: rgb(107, 107, 107);
+    text-decoration: none;
+    font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+
+.dropdown-menu {
+    display: none;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+    font-size: 12px;
+    font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
+    color: rgb(107, 107, 107);
+    padding-left: 15px;
+    padding-top: 5px;
+    border-top: 1px solid rgba(107, 107, 107, 0.1); 
+} */
+/* 
+.dropdown-menu-ul li {
+    list-style-type: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    color: rgb(83, 83, 83);
+    letter-spacing: 0.07em;
+    font-weight: 550;
+} */
+
+/* .dropdown-menu-ul li:nth-last-child(1) {
+    padding-bottom: 25px;
+} */
+
+
+.dropdown-menu {
+    display: none; /* Initial state */
+    position: absolute; /* Position it relative to the header */
+    top: 100%; /* Position it directly below the header */
+    left: 6;
+    width: 100%; /* Full width of the header */
+    background: rgb(242, 242, 242);
+    z-index: 1000;
+}
+
+.dropdown-menu-ul li {
+    list-style-type: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    color: rgb(83, 83, 83);
+    letter-spacing: 0.07em;
+    font-weight: 550;
+}
+
+.dropdown-menu ul li a {
+    color: rgb(107, 107, 107);
+    text-decoration: none;
+    font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
+}
